Overflow fix.

--- a/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
+++ b/wp-content/themes/askonasholt2016/assets/scss/global/_general.scss
@@ -1,6 +1,6 @@
 //General styles throughout site
 
-body {
+section.container {
     overflow-x: hidden;
 }
 
